--- a/.github/workflows/autosync.yml
+++ b/.github/workflows/autosync.yml
@@ -2,27 +2,18 @@ name: autosync
 
 on:
   schedule:
-    - cron: '0 6 * * *'
+    - cron: '0 6 * * *' # At 06:00. https://crontab.guru/
   workflow_dispatch:
-
 jobs:
-  autosync:
-    name: Auto Sync
+  sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: vuejs-translations/ryu-cho@v1
+      - uses: TobKed/github-forks-sync-action@master
         with:
-          workflow-name: autosync
-          access-token: ${{ secrets.AUTO_SYNC_ACCESS_TOKEN }}
-          username: github-actions
-          email: "action@github.com"
-
-          upstream-repo: https://github.com/NoiseFan/vitest-sync-docs.git
-          upstream-repo-branch: dev
-
-          head-repo: https://github.com/vitest-dev/vitest.git
-          head-repo-branch: main
-          path-starts-with: docs/
-
-          track-from: 4ed8b2f83a2f149734f3c5ecb6438309bd85a9e5
-
+          github_token: ${{ secrets.AUTO_SYNC_ACCESS_TOKEN }}
+          upstream_repository: vitest-dev/vitest
+          upstream_branch: main
+          target_repository: NoiseFan/vitest-sync-docs
+          target_branch: upstream
+          force: false
+          tags: false
