--- a/.github/workflows/autosync.yml
+++ b/.github/workflows/autosync.yml
@@ -14,6 +14,6 @@ jobs:
           upstream_repository: vitest-dev/vitest
           upstream_branch: main
           target_repository: NoiseFan/vitest-sync-docs
-          target_branch: upstream
+          target_branch: sync
           force: false
           tags: false
