--- a/.github/workflows/autosync.yml
+++ b/.github/workflows/autosync.yml
@@ -4,12 +4,14 @@ on:
   schedule:
     - cron: '0 6 * * *' # At 06:00. https://crontab.guru/
   workflow_dispatch:
+
 jobs:
-  sync:
+  autosync:
+    name: Auto Sync
     runs-on: ubuntu-latest
     steps:
-      - uses: TobKed/github-forks-sync-action@master
-        with:
+       - uses: TobKed/github-forks-sync-action@master
+         with:
           github_token: ${{ secrets.AUTO_SYNC_ACCESS_TOKEN }}
           upstream_repository: vitest-dev/vitest
           upstream_branch: main
