--- a/.github/workflows/autosync.yml
+++ b/.github/workflows/autosync.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: vuejs-translations/ryu-cho@v1
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
+          access-token: ${{ secrets.ACCESS_TOKEN }}
           username: github-actions
           email: "action@github.com"
 
