--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *' # At 00:00.  https://crontab.guru/
   workflow_dispatch: # on button click
 
+permissions:
+  contents: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
